Add new SVG asset and update styles for layout and navigation

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <li><a href="#">Tour</a></li>
             <li><a href="#">Blog</a></li>
           </ul>
-          <ul>
+          <ul class="login">
             <li><a href="#">Login</a></li>
             <li><a href="#" class="btn dark">Sign Up</a></li>
           </ul>
@@ -41,7 +41,7 @@
           <div class="left">
             <h1>
               Get started your <br />
-              exciting journey <br />
+              exciting <span>journey</span> <br />
               with us.
             </h1>
             <p>
@@ -54,38 +54,42 @@
           <div class="right">
             <img src="./assests/Group 1000003524.png" alt="" />
           </div>
-          <div class="hero-cards">
-            <div class="cards awards">
-              <div class="content">
-                <div>
-                  <img
-                    src="./assests/trophy-removebg-preview 1.png"
-                    alt="award icon"
-                  />
-                  <h3>Best Tour Awards</h3>
-                </div>
+        </div>
+
+        <!-- Hero Cards Start -->
+        <div class="hero-cards">
+          <div class="cards awards">
+            <div class="content">
+              <img
+                src="./assests/trophy-removebg-preview 1.png"
+                alt="award icon"
+              />
+              <div>
+                <h3>Best Tour Awards</h3>
               </div>
             </div>
-            <div class="cards explore">
-              <div class="content">
-                <div>
-                  <img src="./assests/google-maps 1.png" alt="award icon" />
-                  <h3>Explore</h3>
-                </div>
+          </div>
+          <div class="cards explore">
+            <div class="content">
+              <img src="./assests/google-maps 1.png" alt="award icon" />
+              <div>
+                <h3>Explore</h3>
                 <p>Every cornar of the world with us</p>
               </div>
             </div>
-            <div class="cards rating">
-              <div class="content">
-                <div>
-                  <img src="./assests/star 1.png" alt="star icon" />
-                  <h3>27k</h3>
-                </div>
+          </div>
+          <div class="cards rating">
+            <div class="content">
+              <img src="./assests/star 1.png" alt="star icon" />
+              <div>
+                <h3>27k</h3>
                 <p>Customer Reviewd</p>
               </div>
             </div>
           </div>
         </div>
+        <!-- Hero Cards End -->
+
         <!-- search bar -->
         <div class="search-bar">
           <div class="search-content">
@@ -124,5 +128,319 @@
       </div>
     </header>
     <!-- Header Section end -->
+
+    <!-- Things you need to do Start -->
+    <div class="page2">
+      <div class="content">
+        <div class="sub-content">
+          <h1>Things you need <span>to do</span></h1>
+          <p>
+            We ensure that you’ll embark on a perfectly planned, <br>safe vacation
+            at a price you can afford.
+          </p>
+        </div>
+        <div class="flex-cards">
+          <div class="sign-up">
+            <img src="./assests/Group.svg" alt="Signup Image" />
+            <h2>Sign Up</h2>
+            <p>
+              Completes all the work associated with planning and processing
+            </p>
+          </div>
+          <div class="sign-up">
+            <img src="./assests/Group (1).svg" alt="Signup Image" />
+            <h2>Worth of Money</h2>
+            <p>
+              After successful access then book from exclusive deals & pricing
+            </p>
+          </div>
+          <div class="sign-up">
+            <img src="./assests/Group (2).svg" alt="Signup Image" />
+            <h2>Exciting Travel</h2>
+            <p>Start and explore a wide range of exciting travel experience.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Things you need to do End -->
+
+    <!-- Deals & Discounts Start-->
+    <div class="page3">
+      <div class="content">
+        <div class="sub-content">
+          <h1>Exclusive deals & discounts</h1>
+          <p>
+            Discover our fantastic early booking discounts & start planning your
+            journey.
+          </p>
+        </div>
+        <div class="img-cards">
+          <div>
+            <img src="./assests/deals images 1.png" alt="Deals Image" />
+            <div class="content">
+              <div class="sub-content">
+                <h2>Madrid</h2>
+                <p><img src="./assests/star 1.png" alt="star icon" />4.8</p>
+              </div>
+              <div class="sub-content1">
+                <p>
+                  <img src="./assests/Vector.svg" alt="location svg" />Spain
+                </p>
+                <div>
+                  <p><del>$950</del></p>
+                  <p>$850</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div>
+            <img src="./assests/deals images 2.png" alt="Deals Image" />
+            <div class="content">
+              <div class="sub-content">
+                <h2>Firenze</h2>
+                <p><img src="./assests/star 1.png" alt="star icon" />4.5</p>
+              </div>
+              <div class="sub-content1">
+                <p>
+                  <img src="./assests/Vector.svg" alt="location svg" />Italy
+                </p>
+                <div>
+                  <p><del>$850</del></p>
+                  <p>$750</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div>
+            <img src="./assests/deals images 3.png" alt="Deals Image" />
+            <div class="content">
+              <div class="sub-content">
+                <h2>Paris</h2>
+                <p><img src="./assests/star 1.png" alt="star icon" />4.4</p>
+              </div>
+              <div class="sub-content1">
+                <p>
+                  <img src="./assests/Vector.svg" alt="location svg" />France
+                </p>
+                <div>
+                  <p><del>$699</del></p>
+                  <p>$599</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div>
+            <img src="./assests/deals images 4.png" alt="Deals Image" />
+            <div class="content">
+              <div class="sub-content">
+                <h2>London</h2>
+                <p><img src="./assests/star 1.png" alt="star icon" />4.8</p>
+              </div>
+              <div class="sub-content1">
+                <p><img src="./assests/Vector.svg" alt="location svg" />UK</p>
+                <div>
+                  <p><del>$850</del></p>
+                  <p>$850</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <img src="./assests/Slider-btn.svg" alt="" />
+      </div>
+    </div>
+    <!-- Deals & Discounts End -->
+
+    <!-- Best vacation plan Start -->
+    <div class="page4">
+      <div class="content">
+        <div class="sub-content">
+          <h1>Best vacation plan</h1>
+          <p>
+            Plan your perfect vacation with our travel agency. Choose among
+            hundreds of all-inclusive offers!
+          </p>
+        </div>
+        <div class="Slider">
+          <img src="./assests/Slider-btn.svg" alt="" />
+        </div>
+        <div class="img-cards">
+          <div>
+            <img src="./assests/Plan Image 1.png" alt="Plan Image" />
+            <div class="content">
+              <div class="sub-content">
+                <h2>Rome, Italty</h2>
+                <p>$5,42k</p>
+              </div>
+              <div class="sub-content1">
+                <p>
+                  <img src="./assests/Vector (1).svg" alt="location svg" />10
+                  Days Trip
+                </p>
+                <p><img src="./assests/star 1.png" alt="" />4.8</p>
+              </div>
+            </div>
+          </div>
+          <div>
+            <img src="./assests/Plan Image 2.png" alt="Plan Image" />
+            <div class="content">
+              <div class="sub-content">
+                <h2>London,UK</h2>
+                <p>$2,42k</p>
+              </div>
+              <div class="sub-content1">
+                <p>
+                  <img src="./assests/Vector (1).svg" alt="location svg" />07
+                  Days Trip
+                </p>
+                <p><img src="./assests/star 1.png" alt="" />4.7</p>
+              </div>
+            </div>
+          </div>
+          <div>
+            <img src="./assests/Plan Image 3.png" alt="Plan Image" />
+            <div class="content">
+              <div class="sub-content">
+                <h2>Osaka,Japan</h2>
+                <p>$5,42k</p>
+              </div>
+              <div class="sub-content1">
+                <p>
+                  <img src="./assests/Vector (1).svg" alt="location svg" />10
+                  Days Trip
+                </p>
+                <p><img src="./assests/star 1.png" alt="" />4.8</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Best vacation plan End -->
+
+    <!-- What people say Start -->
+    <div class="page5">
+      <div class="left">
+        <h1>
+          What people say <br />
+          about Us.
+        </h1>
+        <p>
+          Our Clients send us bunch of smilies with our services and we love
+          them.
+        </p>
+        <img src="./assests/Slider-btn.svg" alt="" />
+      </div>
+      <div class="right">
+        <img src="./assests/profile.png" alt="" />
+        <div class="client-1">
+          <p>
+            “On the Windows talking painted pasture yet its express parties use.
+            Sure last upon he same as knew next. Of believed or diverted no.”
+          </p>
+          <h3>Chris Thomas</h3>
+          <p>CEO of Red Button</p>
+        </div>
+        <div class="client-2">
+          <p>
+            “On the Windows talking painted pasture yet its express parties use.
+            Sure last upon he same as knew next. Of believed or diverted no.”
+          </p>
+          <h3>Mike taylor</h3>
+          <p>Lahore, Pakistan</p>
+        </div>
+      </div>
+    </div>
+    <!-- What people say End -->
+
+    <!-- Blog Start -->
+    <div class="page6">
+      <h1>Get update with latest blog</h1>
+      <div class="img-cards">
+        <div>
+          <img src="./assests/Blog Image 1.png" alt="Blog Image" />
+          <div class="content">
+            <h3>The Amazing Difference a Year of Travelling .</h3>
+            <p>July 27, 2021</p>
+          </div>
+        </div>
+        <div>
+          <img src="./assests/Blog Image 2.png" alt="Blog Image" />
+          <div class="content">
+            <h3>Travel far enough, you meet yourself.</h3>
+            <p>July 27, 2021</p>
+          </div>
+        </div>
+        <div>
+          <img src="./assests/Blog Image 3.png" alt="Blog Image" />
+          <div class="content">
+            <h3>How to Save Money While Visiting Africa .</h3>
+            <p>July 27, 2021</p>
+          </div>
+        </div>
+        <div>
+          <img src="./assests/Blog Image 1.png" alt="Blog Image" />
+          <div class="content">
+            <h3>Reflections on 5 Months of Travel: Time to Hang</h3>
+            <p>July 27, 2021</p>
+          </div>
+        </div>
+      </div>
+      <div class="dot"></div>
+    </div>
+    <!-- Blog End -->
+
+    <!-- Footer Start -->
+    <footer>
+      <div class="wrapper">
+        <div class="subscribe">
+          <h1>Subscribe and get exclusive deals & offer</h1>
+          <input type="search" placeholder="Enter your mail" />
+          <button class="btn dark">Subscribe</button>
+        </div>
+        <div class="link-container">
+          <div class="links">
+            <h3>Trabook <img src="./assests/logo.svg" alt="" /></h3>
+            <p>Book your trip in minute, get full Control for much longer.</p>
+            <div class="social">
+              <img src="./assests/Social 1.svg" alt="Social Icon" />
+              <img src="./assests/Social 2.svg" alt="Social Icon" />
+              <img src="./assests/Social 3.svg" alt="Social Icon" />
+            </div>
+          </div>
+          <div class="links">
+            <h3>Company</h3>
+            <ul>
+              <li><a href="#">About</a></li>
+              <li><a href="#">Careers</a></li>
+              <li><a href="#">Logistic</a></li>
+              <li><a href="#">Privacy & Policy</a></li>
+            </ul>
+          </div>
+          <div class="links">
+            <h3>Contact</h3>
+            <ul>
+              <li><a href="#">Help/FAQ</a></li>
+              <li><a href="#">Press</a></li>
+              <li><a href="#">Affilates</a></li>
+            </ul>
+          </div>
+          <div class="links">
+            <h3>More</h3>
+            <ul>
+              <li><a href="#">Press Centre</a></li>
+              <li><a href="#">Our Blog</a></li>
+              <li><a href="#">Low fare tips</a></li>
+            </ul>
+          </div>
+        </div>
+        <hr />
+        <div>
+          <p>Copyright, Trabook 2022. All rights reserved.</p>
+          <p>Terms & Conditions</p>
+        </div>
+      </div>
+    </footer>
+    <!-- Footer End -->
   </body>
 </html>
