--- a/index.html
+++ b/index.html
@@ -131,12 +131,13 @@
 
     <!-- Things you need to do Start -->
     <div class="page2">
+      <img src="./assests/Element.svg" alt="" class="element" />
       <div class="content">
         <div class="sub-content">
           <h1>Things you need <span>to do</span></h1>
           <p>
-            We ensure that you’ll embark on a perfectly planned, <br>safe vacation
-            at a price you can afford.
+            We ensure that you’ll embark on a perfectly planned, <br />safe
+            vacation at a price you can afford.
           </p>
         </div>
         <div class="flex-cards">
@@ -168,148 +169,192 @@
     <div class="page3">
       <div class="content">
         <div class="sub-content">
-          <h1>Exclusive deals & discounts</h1>
+          <h1>Exclusive <span>deals & discounts</span></h1>
           <p>
-            Discover our fantastic early booking discounts & start planning your
-            journey.
+            Discover our fantastic early booking discounts <br />
+            & start planning your journey.
           </p>
         </div>
-        <div class="img-cards">
-          <div>
-            <img src="./assests/deals images 1.png" alt="Deals Image" />
+        <div class="img_cards">
+          <div class="cards">
+            <img
+              src="./assests/deals images 1.png"
+              alt="Deals Image"
+              class="deals_img"
+            />
             <div class="content">
-              <div class="sub-content">
-                <h2>Madrid</h2>
-                <p><img src="./assests/star 1.png" alt="star icon" />4.8</p>
+              <div class="left"><h3>Madrid</h3></div>
+              <div class="right">
+                <img src="./assests/star 1.png" alt="" />
+                <p>4.8</p>
               </div>
-              <div class="sub-content1">
-                <p>
-                  <img src="./assests/Vector.svg" alt="location svg" />Spain
-                </p>
-                <div>
-                  <p><del>$950</del></p>
-                  <p>$850</p>
-                </div>
+            </div>
+            <div class="sub_content">
+              <div class="left">
+                <img src="./assests/Vector.svg" alt="" />
+                <p>Spain</p>
+              </div>
+              <div class="right">
+                <del>$950</del>
+                <p>$850</p>
               </div>
             </div>
           </div>
-          <div>
-            <img src="./assests/deals images 2.png" alt="Deals Image" />
+          <div class="cards">
+            <img
+              src="./assests/deals images 2.png"
+              alt="Deals Image"
+              class="deals_img"
+            />
             <div class="content">
-              <div class="sub-content">
-                <h2>Firenze</h2>
-                <p><img src="./assests/star 1.png" alt="star icon" />4.5</p>
+              <div class="left"><h3>Firenze</h3></div>
+              <div class="right">
+                <img src="./assests/star 1.png" alt="" />
+                <p>4.5</p>
               </div>
-              <div class="sub-content1">
-                <p>
-                  <img src="./assests/Vector.svg" alt="location svg" />Italy
-                </p>
-                <div>
-                  <p><del>$850</del></p>
-                  <p>$750</p>
-                </div>
+            </div>
+            <div class="sub_content">
+              <div class="left">
+                <img src="./assests/Vector.svg" alt="" />
+                <p>Italy</p>
+              </div>
+              <div class="right">
+                <del>$850</del>
+                <p>$750</p>
               </div>
             </div>
           </div>
-          <div>
-            <img src="./assests/deals images 3.png" alt="Deals Image" />
+          <div class="cards">
+            <img
+              src="./assests/deals images 3.png"
+              alt="Deals Image"
+              class="deals_img"
+            />
             <div class="content">
-              <div class="sub-content">
-                <h2>Paris</h2>
-                <p><img src="./assests/star 1.png" alt="star icon" />4.4</p>
+              <div class="left"><h3>Paris</h3></div>
+              <div class="right">
+                <img src="./assests/star 1.png" alt="" />
+                <p>4.4</p>
               </div>
-              <div class="sub-content1">
-                <p>
-                  <img src="./assests/Vector.svg" alt="location svg" />France
-                </p>
-                <div>
-                  <p><del>$699</del></p>
-                  <p>$599</p>
-                </div>
+            </div>
+            <div class="sub_content">
+              <div class="left">
+                <img src="./assests/Vector.svg" alt="" />
+                <p>France</p>
+              </div>
+              <div class="right">
+                <del>$699</del>
+                <p>$599</p>
               </div>
             </div>
           </div>
-          <div>
-            <img src="./assests/deals images 4.png" alt="Deals Image" />
+          <div class="cards">
+            <img
+              src="./assests/deals images 4.png"
+              alt="Deals Image"
+              class="deals_img"
+            />
             <div class="content">
-              <div class="sub-content">
-                <h2>London</h2>
-                <p><img src="./assests/star 1.png" alt="star icon" />4.8</p>
+              <div class="left"><h3>London</h3></div>
+              <div class="right">
+                <img src="./assests/star 1.png" alt="" />
+                <p>4.8</p>
               </div>
-              <div class="sub-content1">
-                <p><img src="./assests/Vector.svg" alt="location svg" />UK</p>
-                <div>
-                  <p><del>$850</del></p>
-                  <p>$850</p>
-                </div>
+            </div>
+            <div class="sub_content">
+              <div class="left">
+                <img src="./assests/Vector.svg" alt="" />
+                <p>UK</p>
+              </div>
+              <div class="right">
+                <del>$850</del>
+                <p>$850</p>
               </div>
             </div>
           </div>
         </div>
-        <img src="./assests/Slider-btn.svg" alt="" />
+        <div class="slider">
+          <img src="./assests/Slider-btn.svg" alt="" />
+        </div>
       </div>
     </div>
     <!-- Deals & Discounts End -->
 
     <!-- Best vacation plan Start -->
     <div class="page4">
+      <img src="./assests/Element(2).svg" alt="" class="element">
       <div class="content">
         <div class="sub-content">
-          <h1>Best vacation plan</h1>
+          <h1>Best <span>vacation plan</span></h1>
           <p>
-            Plan your perfect vacation with our travel agency. Choose among
-            hundreds of all-inclusive offers!
+            Plan your perfect vacation with our travel agency. Choose <br />
+            among hundreds of all-inclusive offers!
           </p>
         </div>
-        <div class="Slider">
+        <div class="slider">
           <img src="./assests/Slider-btn.svg" alt="" />
         </div>
-        <div class="img-cards">
-          <div>
-            <img src="./assests/Plan Image 1.png" alt="Plan Image" />
+        <div class="img_cards">
+          <div class="cards">
+            <img
+              src="./assests/Plan Image 1.png"
+              alt="Plan Image"
+              class="plan_img"
+            />
             <div class="content">
-              <div class="sub-content">
-                <h2>Rome, Italty</h2>
-                <p>$5,42k</p>
+              <div class="left"><h3>Rome, Italty</h3></div>
+              <div class="right"><p>$5,42k</p></div>
+            </div>
+            <div class="sub_content">
+              <div class="left">
+                <img src="./assests/Vector (1).svg" alt="" />
+                <p>10 Days Trip</p>
               </div>
-              <div class="sub-content1">
-                <p>
-                  <img src="./assests/Vector (1).svg" alt="location svg" />10
-                  Days Trip
-                </p>
-                <p><img src="./assests/star 1.png" alt="" />4.8</p>
+              <div class="right">
+                <img src="./assests/star 1.png" alt="" />
+                <p>4.8</p>
               </div>
             </div>
           </div>
-          <div>
-            <img src="./assests/Plan Image 2.png" alt="Plan Image" />
+          <div class="cards">
+            <img
+              src="./assests/Plan Image 2.png"
+              alt="Plan Image"
+              class="plan_img"
+            />
             <div class="content">
-              <div class="sub-content">
-                <h2>London,UK</h2>
-                <p>$2,42k</p>
+              <div class="left"><h3>London,UK</h3></div>
+              <div class="right"><p>$2,42k</p></div>
+            </div>
+            <div class="sub_content">
+              <div class="left">
+                <img src="./assests/Vector (1).svg" alt="" />
+                <p>07 Days Trip</p>
               </div>
-              <div class="sub-content1">
-                <p>
-                  <img src="./assests/Vector (1).svg" alt="location svg" />07
-                  Days Trip
-                </p>
-                <p><img src="./assests/star 1.png" alt="" />4.7</p>
+              <div class="right">
+                <img src="./assests/star 1.png" alt="" />
+                <p>4.7</p>
               </div>
             </div>
           </div>
-          <div>
-            <img src="./assests/Plan Image 3.png" alt="Plan Image" />
+          <div class="cards">
+            <img
+              src="./assests/Plan Image 2.png"
+              alt="Plan Image"
+              class="plan_img"
+            />
             <div class="content">
-              <div class="sub-content">
-                <h2>Osaka,Japan</h2>
-                <p>$5,42k</p>
+              <div class="left"><h3>London,UK</h3></div>
+              <div class="right"><p>$2,42k</p></div>
+            </div>
+            <div class="sub_content">
+              <div class="left">
+                <img src="./assests/Vector (1).svg" alt="" />
+                <p>07 Days Trip</p>
               </div>
-              <div class="sub-content1">
-                <p>
-                  <img src="./assests/Vector (1).svg" alt="location svg" />10
-                  Days Trip
-                </p>
-                <p><img src="./assests/star 1.png" alt="" />4.8</p>
+              <div class="right">
+                <img src="./assests/star 1.png" alt="" />
+                <p>4.7</p>
               </div>
             </div>
           </div>
@@ -323,7 +368,7 @@
       <div class="left">
         <h1>
           What people say <br />
-          about Us.
+          <span>about Us.</span>
         </h1>
         <p>
           Our Clients send us bunch of smilies with our services and we love
@@ -332,61 +377,58 @@
         <img src="./assests/Slider-btn.svg" alt="" />
       </div>
       <div class="right">
-        <img src="./assests/profile.png" alt="" />
         <div class="client-1">
+          <img src="./assests/profile.png" alt="" />
+          <div class="content">
+            <p>
+              “On the Windows talking painted pasture yet its express parties
+              use. Sure last upon he same as knew next. Of believed or diverted
+              no.”
+            </p>
+            <h3>Mike taylor</h3>
+            <p>Lahore, Pakistan</p>
+          </div>
+        </div>
+        <!-- <div class="client-2">
           <p>
             “On the Windows talking painted pasture yet its express parties use.
             Sure last upon he same as knew next. Of believed or diverted no.”
           </p>
           <h3>Chris Thomas</h3>
           <p>CEO of Red Button</p>
-        </div>
-        <div class="client-2">
-          <p>
-            “On the Windows talking painted pasture yet its express parties use.
-            Sure last upon he same as knew next. Of believed or diverted no.”
-          </p>
-          <h3>Mike taylor</h3>
-          <p>Lahore, Pakistan</p>
-        </div>
+        </div> -->
       </div>
     </div>
     <!-- What people say End -->
 
     <!-- Blog Start -->
     <div class="page6">
-      <h1>Get update with latest blog</h1>
-      <div class="img-cards">
-        <div>
-          <img src="./assests/Blog Image 1.png" alt="Blog Image" />
-          <div class="content">
-            <h3>The Amazing Difference a Year of Travelling .</h3>
-            <p>July 27, 2021</p>
-          </div>
+      <h1>Get update with <span>latest blog</span></h1>
+      <div class="img_cards">
+        <div class="cards">
+          <img src="./assests/Blog Image 1.png" alt="" class="blog_img" />
+          <h3>The Amazing Difference a Year of Travelling .</h3>
+          <p>July 27, 2021</p>
         </div>
-        <div>
-          <img src="./assests/Blog Image 2.png" alt="Blog Image" />
-          <div class="content">
-            <h3>Travel far enough, you meet yourself.</h3>
-            <p>July 27, 2021</p>
-          </div>
+        <div class="cards">
+          <img src="./assests/Blog Image 2.png" alt="" class="blog_img" />
+          <h3>Travel far enough, you meet yourself.</h3>
+          <p>July 27, 2021</p>
         </div>
-        <div>
-          <img src="./assests/Blog Image 3.png" alt="Blog Image" />
-          <div class="content">
-            <h3>How to Save Money While Visiting Africa .</h3>
-            <p>July 27, 2021</p>
-          </div>
+        <div class="cards">
+          <img src="./assests/Blog Image 3.png" alt="" class="blog_img" />
+          <h3>How to Save Money While Visiting Africa .</h3>
+          <p>July 27, 2021</p>
         </div>
-        <div>
-          <img src="./assests/Blog Image 1.png" alt="Blog Image" />
-          <div class="content">
-            <h3>Reflections on 5 Months of Travel: Time to Hang</h3>
-            <p>July 27, 2021</p>
-          </div>
+        <div class="cards">
+          <img src="./assests/Blog Image 4.png" alt="" class="blog_img" />
+          <h3>Reflections on 5 Months of Travel: Time to Hang</h3>
+          <p>July 27, 2021</p>
         </div>
       </div>
-      <div class="dot"></div>
+      <div class="slider">
+        <img src="./assests/Slider.png" alt="" />
+      </div>
     </div>
     <!-- Blog End -->
 
@@ -394,48 +436,62 @@
     <footer>
       <div class="wrapper">
         <div class="subscribe">
-          <h1>Subscribe and get exclusive deals & offer</h1>
-          <input type="search" placeholder="Enter your mail" />
-          <button class="btn dark">Subscribe</button>
+          <img src="./assests/Element(1).svg" alt="" class="element" />
+          <img src="./assests/Group 42.svg" alt="" class="element1" />
+          <h1>
+            Subscribe and get exclusive <br />
+            deals & offer
+          </h1>
+          <div class="content">
+            <input type="search" placeholder="Enter your mail" />
+            <button class="btn dark">Subscribe</button>
+          </div>
         </div>
         <div class="link-container">
-          <div class="links">
-            <h3>Trabook <img src="./assests/logo.svg" alt="" /></h3>
-            <p>Book your trip in minute, get full Control for much longer.</p>
-            <div class="social">
-              <img src="./assests/Social 1.svg" alt="Social Icon" />
-              <img src="./assests/Social 2.svg" alt="Social Icon" />
-              <img src="./assests/Social 3.svg" alt="Social Icon" />
+          <div class="content">
+            <div class="link">
+              <h3>Trabook &nbsp;&nbsp;<img src="./assests/logo.svg" alt="" /></h3>
+              <p>
+                Book your trip in minute, get full <br />Control for much
+                longer.
+              </p>
+              <div class="social">
+                <img src="./assests/Social 1.svg" alt="Social Icon" />
+                <img src="./assests/Social 2.svg" alt="Social Icon" />
+                <img src="./assests/Social 3.svg" alt="Social Icon" />
+              </div>
             </div>
           </div>
-          <div class="links">
-            <h3>Company</h3>
-            <ul>
-              <li><a href="#">About</a></li>
-              <li><a href="#">Careers</a></li>
-              <li><a href="#">Logistic</a></li>
-              <li><a href="#">Privacy & Policy</a></li>
-            </ul>
-          </div>
-          <div class="links">
-            <h3>Contact</h3>
-            <ul>
-              <li><a href="#">Help/FAQ</a></li>
-              <li><a href="#">Press</a></li>
-              <li><a href="#">Affilates</a></li>
-            </ul>
-          </div>
-          <div class="links">
-            <h3>More</h3>
-            <ul>
-              <li><a href="#">Press Centre</a></li>
-              <li><a href="#">Our Blog</a></li>
-              <li><a href="#">Low fare tips</a></li>
-            </ul>
+          <div class="content">
+            <div class="links">
+              <h3>Company</h3>
+              <ul>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Careers</a></li>
+                <li><a href="#">Logistic</a></li>
+                <li><a href="#">Privacy & Policy</a></li>
+              </ul>
+            </div>
+            <div class="links">
+              <h3>Contact</h3>
+              <ul>
+                <li><a href="#">Help/FAQ</a></li>
+                <li><a href="#">Press</a></li>
+                <li><a href="#">Affilates</a></li>
+              </ul>
+            </div>
+            <div class="links">
+              <h3>More</h3>
+              <ul>
+                <li><a href="#">Press Centre</a></li>
+                <li><a href="#">Our Blog</a></li>
+                <li><a href="#">Low fare tips</a></li>
+              </ul>
+            </div>
           </div>
         </div>
         <hr />
-        <div>
+        <div class="copyright">
           <p>Copyright, Trabook 2022. All rights reserved.</p>
           <p>Terms & Conditions</p>
         </div>
