--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
 
     <!-- Best vacation plan Start -->
     <div class="page4">
-      <img src="./assests/Element(2).svg" alt="" class="element">
+      <img src="./assests/Element(2).svg" alt="" class="element" />
       <div class="content">
         <div class="sub-content">
           <h1>Best <span>vacation plan</span></h1>
@@ -450,7 +450,9 @@
         <div class="link-container">
           <div class="content">
             <div class="link">
-              <h3>Trabook &nbsp;&nbsp;<img src="./assests/logo.svg" alt="" /></h3>
+              <h3>
+                Trabook &nbsp;&nbsp;<img src="./assests/logo.svg" alt="" />
+              </h3>
               <p>
                 Book your trip in minute, get full <br />Control for much
                 longer.
